# file_ingestion

./: .gitignore  README.md  main.py  parameters.py  parametros.py  pyproject.toml  requirements.txt
