[tool.poetry]
name = "file-ingestion"
version = "0.1.0"
description = ""
authors = ["Nathan Souza <naathanmarinho11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
